welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: L is already defined as variable L
  val L= litMessage().toInt
      ^Array2:4: error: not found: value i
  var T = new Array[Color](i)
                           ^Array2:13: error: not found: value j
  recule(j)
         ^Array2:18: error: not found: value k
  for (g <- 0 to k-1){
                 ^Array2:22: error: not found: value k
  for (cnt <- 0 to k){
                   ^Array2:38: error: not found: value k
  avance(k-2)
         ^Array2:40: error: not found: value i
  avance(i-2)
         ^